--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ description: Welcome to Adrian Marinescu's personal blog
  			<div class="col-md-4 col-sm-6 col-xs-12">
 				<a href="about/" title="About Me">
 					<div class="tile purple profile">
-						<h2 class="title">About Me</h2>
-						<p>Hello World, I am {{site.author}}.</p>
+        					<img src="img/resume/me-square.jpg" style="height:160px;margin: -20px;">
+						<h2 class="title" style="padding-left: 170px;margin-top: -80px;">About Me</h2>						
 					</div>
 				</a>
 		    </div>
